in process of making number constraints

--- a/app/src/main/res/layout/activity_manualbutton.xml
+++ b/app/src/main/res/layout/activity_manualbutton.xml
@@ -58,6 +58,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text1"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -65,6 +66,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text2"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -72,6 +74,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -79,6 +82,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text4"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -86,6 +90,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text5"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -93,6 +98,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text6"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -100,6 +106,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text7"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -107,6 +114,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text8"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -114,6 +122,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text9"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -124,8 +133,8 @@
 
         <TableRow android:background="@drawable/table_border">
 
-
             <EditText
+                android:inputType="number"
                 android:id="@+id/text10"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -133,6 +142,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text11"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -140,6 +150,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text12"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -147,6 +158,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text13"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -154,6 +166,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text14"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -161,6 +174,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text15"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -168,6 +182,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text16"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -175,6 +190,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text17"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -182,6 +198,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text18"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -193,6 +210,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text19"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -200,6 +218,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text20"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -207,6 +226,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text21"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -214,6 +234,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text22"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -221,6 +242,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text23"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -228,6 +250,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text24"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -235,6 +258,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text25"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -242,6 +266,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text26"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -249,6 +274,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text27"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -260,6 +286,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text28"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -267,6 +294,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text29"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -274,6 +302,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text30"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -281,6 +310,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text31"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -288,6 +318,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text32"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -295,6 +326,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text33"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -302,6 +334,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text34"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -309,6 +342,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text35"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -316,6 +350,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text36"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -327,6 +362,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text37"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -335,6 +371,7 @@
 
             <EditText
                 android:id="@+id/text38"
+                android:inputType="number"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
@@ -342,12 +379,14 @@
 
             <EditText
                 android:id="@+id/text39"
+                android:inputType="number"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text40"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -355,6 +394,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text41"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -362,6 +402,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text42"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -369,6 +410,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text43"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -376,6 +418,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text44"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -383,6 +426,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text45"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -393,6 +437,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text46"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -400,6 +445,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text47"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -407,6 +453,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text48"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -414,6 +461,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text49"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -421,6 +469,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text50"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -428,6 +477,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text51"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -435,6 +485,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text52"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -442,6 +493,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text53"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -449,6 +501,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text54"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -459,6 +512,7 @@
         <TableRow android:background="@drawable/table_border">
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text55"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -466,6 +520,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text56"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -473,6 +528,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text57"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -480,6 +536,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text58"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -487,6 +544,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text59"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -494,6 +552,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text60"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -501,6 +560,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text61"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -508,6 +568,7 @@
                 android:background="@drawable/table_border" />
 
             <EditText
+                android:inputType="number"
                 android:id="@+id/text62"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
