--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-    <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-
-    </style>
+    <style name="SplashTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar"></style>
+    <style name="backButton" parent="ThemeOverlay.AppCompat"/>
 </resources>
