--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#E00BDA</color>
+    <color name="colorPrimary">#9400C9</color>
+    <color name="colorPrimaryVariant">#310566</color>
+    <color name="colorOnPrimary">@color/white</color>
+    <!-- Secondary brand color. -->
+    <color name="colorSecondary">#E00BDA</color>
+    <color name="colorSecondaryVariant">#F7006F</color>
+    <color name="colorOnSecondary">@color/black</color>
 </resources>
