--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -26,4 +26,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.031" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="200dp"
+        android:scaleType="fitEnd"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/wordart" />
+
 </RelativeLayout>
